src/parser3.output
Grammar

    0 $accept: t_program $end

    1 t_program: T_TARGOS t_automaton_list t_proc t_par T_END_TARGOS

    2 t_automaton_list: t_automaton
    3                 | t_automaton_list t_automaton

    4 t_automaton: t_autohead t_states t_trans

    5 t_autohead: T_AUTOMATON T_ID

    6 t_states: T_STATES t_state_list

    7 t_state_list: t_state_init t_state_normal_list

    8 t_state_init: T_ID T_INIT '[' ']'
    9             | T_ID T_INIT '[' t_ooo ']'

   10 t_state_normal_list: T_ID '[' ']'
   11                    | T_ID '[' t_ooo ']'
   12                    | T_ID '[' ']' t_state_normal_list
   13                    | T_ID '[' t_ooo ']' t_state_normal_list

   14 t_ooo: T_ID '=' t_out_expr ';'
   15      | t_ooo T_ID '=' t_out_expr ';'

   16 t_out_expr: T_ID
   17           | T_TRUE
   18           | T_FALSE
   19           | T_PRE '(' T_ID ')'
   20           | '(' t_out_expr ')'
   21           | T_NOT t_out_expr
   22           | t_out_expr T_AND t_out_expr
   23           | t_out_expr T_OR t_out_expr

   24 t_trans: T_TRANS t_tran_list

   25 t_tran_list: T_FROM T_ID T_TO T_ID T_WITH T_ID '[' t_tran_expr ']'
   26            | T_FROM T_ID T_TO T_ID T_WITH T_ID '[' t_tran_expr ']' t_tran_list

   27 t_tran_expr: T_ID
   28            | T_TRUE
   29            | T_FALSE
   30            | T_PRE '(' T_ID ')'
   31            | '(' t_tran_expr ')'
   32            | T_NOT t_tran_expr
   33            | t_tran_expr T_AND t_tran_expr
   34            | t_tran_expr T_OR t_tran_expr

   35 t_proc: T_PROCESS T_SYSTEM '[' t_in ',' t_out ']'

   36 t_in: T_IN '(' t_inlist ':' T_BOOL ')'

   37 t_inlist: T_ID
   38         | '*' T_ID
   39         | T_ID ',' t_inlist
   40         | '*' T_ID ',' t_inlist

   41 t_out: T_OUT '(' t_outlist ':' T_BOOL ')'

   42 t_outlist: T_ID '=' T_TRUE
   43          | T_ID '=' T_FALSE
   44          | T_ID '=' T_TRUE ',' t_outlist
   45          | T_ID '=' T_FALSE ',' t_outlist

   46 t_par: T_PAR t_raff T_ENDPAR

   47 t_raff: T_RAFF T_ID
   48       | T_RAFF T_ID t_raff


Terminals, with rules where they appear

$end (0) 0
'(' (40) 19 20 30 31 36 41
')' (41) 19 20 30 31 36 41
'*' (42) 38 40
',' (44) 35 39 40 44 45
':' (58) 36 41
';' (59) 14 15
'=' (61) 14 15 42 43 44 45
'[' (91) 8 9 10 11 12 13 25 26 35
']' (93) 8 9 10 11 12 13 25 26 35
error (256)
T_TARGOS (258) 1
T_END_TARGOS (259) 1
T_AUTOMATON (260) 5
T_STATES (261) 6
T_INIT (262) 8 9
T_TRANS (263) 24
T_FROM (264) 25 26
T_TO (265) 25 26
T_WITH (266) 25 26
T_AND (267) 22 33
T_OR (268) 23 34
T_NOT (269) 21 32
T_PRE (270) 19 30
T_ID (271) 5 8 9 10 11 12 13 14 15 16 19 25 26 27 30 37 38 39 40 42
    43 44 45 47 48
T_PROCESS (272) 35
T_SYSTEM (273) 35
T_IN (274) 36
T_OUT (275) 41
T_BOOL (276) 36 41
T_PAR (277) 46
T_ENDPAR (278) 46
T_RAFF (279) 47 48
T_TRUE (280) 17 28 42 44
T_FALSE (281) 18 29 43 45


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
t_program (37)
    on left: 1, on right: 0
t_automaton_list (38)
    on left: 2 3, on right: 1 3
t_automaton (39)
    on left: 4, on right: 2 3
t_autohead (40)
    on left: 5, on right: 4
t_states (41)
    on left: 6, on right: 4
t_state_list (42)
    on left: 7, on right: 6
t_state_init (43)
    on left: 8 9, on right: 7
t_state_normal_list (44)
    on left: 10 11 12 13, on right: 7 12 13
t_ooo (45)
    on left: 14 15, on right: 9 11 13 15
t_out_expr (46)
    on left: 16 17 18 19 20 21 22 23, on right: 14 15 20 21 22 23
t_trans (47)
    on left: 24, on right: 4
t_tran_list (48)
    on left: 25 26, on right: 24 26
t_tran_expr (49)
    on left: 27 28 29 30 31 32 33 34, on right: 25 26 31 32 33 34
t_proc (50)
    on left: 35, on right: 1
t_in (51)
    on left: 36, on right: 35
t_inlist (52)
    on left: 37 38 39 40, on right: 36 39 40
t_out (53)
    on left: 41, on right: 35
t_outlist (54)
    on left: 42 43 44 45, on right: 41 44 45
t_par (55)
    on left: 46, on right: 1
t_raff (56)
    on left: 47 48, on right: 46 48


state 0

    0 $accept: . t_program $end

    T_TARGOS  shift, and go to state 1

    t_program  go to state 2


state 1

    1 t_program: T_TARGOS . t_automaton_list t_proc t_par T_END_TARGOS

    T_AUTOMATON  shift, and go to state 3

    t_automaton_list  go to state 4
    t_automaton       go to state 5
    t_autohead        go to state 6


state 2

    0 $accept: t_program . $end

    $end  shift, and go to state 7


state 3

    5 t_autohead: T_AUTOMATON . T_ID

    T_ID  shift, and go to state 8


state 4

    1 t_program: T_TARGOS t_automaton_list . t_proc t_par T_END_TARGOS
    3 t_automaton_list: t_automaton_list . t_automaton

    T_AUTOMATON  shift, and go to state 3
    T_PROCESS    shift, and go to state 9

    t_automaton  go to state 10
    t_autohead   go to state 6
    t_proc       go to state 11


state 5

    2 t_automaton_list: t_automaton .

    $default  reduce using rule 2 (t_automaton_list)


state 6

    4 t_automaton: t_autohead . t_states t_trans

    T_STATES  shift, and go to state 12

    t_states  go to state 13


state 7

    0 $accept: t_program $end .

    $default  accept


state 8

    5 t_autohead: T_AUTOMATON T_ID .

    $default  reduce using rule 5 (t_autohead)


state 9

   35 t_proc: T_PROCESS . T_SYSTEM '[' t_in ',' t_out ']'

    T_SYSTEM  shift, and go to state 14


state 10

    3 t_automaton_list: t_automaton_list t_automaton .

    $default  reduce using rule 3 (t_automaton_list)


state 11

    1 t_program: T_TARGOS t_automaton_list t_proc . t_par T_END_TARGOS

    T_PAR  shift, and go to state 15

    t_par  go to state 16


state 12

    6 t_states: T_STATES . t_state_list

    T_ID  shift, and go to state 17

    t_state_list  go to state 18
    t_state_init  go to state 19


state 13

    4 t_automaton: t_autohead t_states . t_trans

    T_TRANS  shift, and go to state 20

    t_trans  go to state 21


state 14

   35 t_proc: T_PROCESS T_SYSTEM . '[' t_in ',' t_out ']'

    '['  shift, and go to state 22


state 15

   46 t_par: T_PAR . t_raff T_ENDPAR

    T_RAFF  shift, and go to state 23

    t_raff  go to state 24


state 16

    1 t_program: T_TARGOS t_automaton_list t_proc t_par . T_END_TARGOS

    T_END_TARGOS  shift, and go to state 25


state 17

    8 t_state_init: T_ID . T_INIT '[' ']'
    9             | T_ID . T_INIT '[' t_ooo ']'

    T_INIT  shift, and go to state 26


state 18

    6 t_states: T_STATES t_state_list .

    $default  reduce using rule 6 (t_states)


state 19

    7 t_state_list: t_state_init . t_state_normal_list

    T_ID  shift, and go to state 27

    t_state_normal_list  go to state 28


state 20

   24 t_trans: T_TRANS . t_tran_list

    T_FROM  shift, and go to state 29

    t_tran_list  go to state 30


state 21

    4 t_automaton: t_autohead t_states t_trans .

    $default  reduce using rule 4 (t_automaton)


state 22

   35 t_proc: T_PROCESS T_SYSTEM '[' . t_in ',' t_out ']'

    T_IN  shift, and go to state 31

    t_in  go to state 32


state 23

   47 t_raff: T_RAFF . T_ID
   48       | T_RAFF . T_ID t_raff

    T_ID  shift, and go to state 33


state 24

   46 t_par: T_PAR t_raff . T_ENDPAR

    T_ENDPAR  shift, and go to state 34


state 25

    1 t_program: T_TARGOS t_automaton_list t_proc t_par T_END_TARGOS .

    $default  reduce using rule 1 (t_program)


state 26

    8 t_state_init: T_ID T_INIT . '[' ']'
    9             | T_ID T_INIT . '[' t_ooo ']'

    '['  shift, and go to state 35


state 27

   10 t_state_normal_list: T_ID . '[' ']'
   11                    | T_ID . '[' t_ooo ']'
   12                    | T_ID . '[' ']' t_state_normal_list
   13                    | T_ID . '[' t_ooo ']' t_state_normal_list

    '['  shift, and go to state 36


state 28

    7 t_state_list: t_state_init t_state_normal_list .

    $default  reduce using rule 7 (t_state_list)


state 29

   25 t_tran_list: T_FROM . T_ID T_TO T_ID T_WITH T_ID '[' t_tran_expr ']'
   26            | T_FROM . T_ID T_TO T_ID T_WITH T_ID '[' t_tran_expr ']' t_tran_list

    T_ID  shift, and go to state 37


state 30

   24 t_trans: T_TRANS t_tran_list .

    $default  reduce using rule 24 (t_trans)


state 31

   36 t_in: T_IN . '(' t_inlist ':' T_BOOL ')'

    '('  shift, and go to state 38


state 32

   35 t_proc: T_PROCESS T_SYSTEM '[' t_in . ',' t_out ']'

    ','  shift, and go to state 39


state 33

   47 t_raff: T_RAFF T_ID .
   48       | T_RAFF T_ID . t_raff

    T_RAFF  shift, and go to state 23

    $default  reduce using rule 47 (t_raff)

    t_raff  go to state 40


state 34

   46 t_par: T_PAR t_raff T_ENDPAR .

    $default  reduce using rule 46 (t_par)


state 35

    8 t_state_init: T_ID T_INIT '[' . ']'
    9             | T_ID T_INIT '[' . t_ooo ']'

    T_ID  shift, and go to state 41
    ']'   shift, and go to state 42

    t_ooo  go to state 43


state 36

   10 t_state_normal_list: T_ID '[' . ']'
   11                    | T_ID '[' . t_ooo ']'
   12                    | T_ID '[' . ']' t_state_normal_list
   13                    | T_ID '[' . t_ooo ']' t_state_normal_list

    T_ID  shift, and go to state 41
    ']'   shift, and go to state 44

    t_ooo  go to state 45


state 37

   25 t_tran_list: T_FROM T_ID . T_TO T_ID T_WITH T_ID '[' t_tran_expr ']'
   26            | T_FROM T_ID . T_TO T_ID T_WITH T_ID '[' t_tran_expr ']' t_tran_list

    T_TO  shift, and go to state 46


state 38

   36 t_in: T_IN '(' . t_inlist ':' T_BOOL ')'

    T_ID  shift, and go to state 47
    '*'   shift, and go to state 48

    t_inlist  go to state 49


state 39

   35 t_proc: T_PROCESS T_SYSTEM '[' t_in ',' . t_out ']'

    T_OUT  shift, and go to state 50

    t_out  go to state 51


state 40

   48 t_raff: T_RAFF T_ID t_raff .

    $default  reduce using rule 48 (t_raff)


state 41

   14 t_ooo: T_ID . '=' t_out_expr ';'

    '='  shift, and go to state 52


state 42

    8 t_state_init: T_ID T_INIT '[' ']' .

    $default  reduce using rule 8 (t_state_init)


state 43

    9 t_state_init: T_ID T_INIT '[' t_ooo . ']'
   15 t_ooo: t_ooo . T_ID '=' t_out_expr ';'

    T_ID  shift, and go to state 53
    ']'   shift, and go to state 54


state 44

   10 t_state_normal_list: T_ID '[' ']' .
   12                    | T_ID '[' ']' . t_state_normal_list

    T_ID  shift, and go to state 27

    $default  reduce using rule 10 (t_state_normal_list)

    t_state_normal_list  go to state 55


state 45

   11 t_state_normal_list: T_ID '[' t_ooo . ']'
   13                    | T_ID '[' t_ooo . ']' t_state_normal_list
   15 t_ooo: t_ooo . T_ID '=' t_out_expr ';'

    T_ID  shift, and go to state 53
    ']'   shift, and go to state 56


state 46

   25 t_tran_list: T_FROM T_ID T_TO . T_ID T_WITH T_ID '[' t_tran_expr ']'
   26            | T_FROM T_ID T_TO . T_ID T_WITH T_ID '[' t_tran_expr ']' t_tran_list

    T_ID  shift, and go to state 57


state 47

   37 t_inlist: T_ID .
   39         | T_ID . ',' t_inlist

    ','  shift, and go to state 58

    $default  reduce using rule 37 (t_inlist)


state 48

   38 t_inlist: '*' . T_ID
   40         | '*' . T_ID ',' t_inlist

    T_ID  shift, and go to state 59


state 49

   36 t_in: T_IN '(' t_inlist . ':' T_BOOL ')'

    ':'  shift, and go to state 60


state 50

   41 t_out: T_OUT . '(' t_outlist ':' T_BOOL ')'

    '('  shift, and go to state 61


state 51

   35 t_proc: T_PROCESS T_SYSTEM '[' t_in ',' t_out . ']'

    ']'  shift, and go to state 62


state 52

   14 t_ooo: T_ID '=' . t_out_expr ';'

    T_NOT    shift, and go to state 63
    T_PRE    shift, and go to state 64
    T_ID     shift, and go to state 65
    T_TRUE   shift, and go to state 66
    T_FALSE  shift, and go to state 67
    '('      shift, and go to state 68

    t_out_expr  go to state 69


state 53

   15 t_ooo: t_ooo T_ID . '=' t_out_expr ';'

    '='  shift, and go to state 70


state 54

    9 t_state_init: T_ID T_INIT '[' t_ooo ']' .

    $default  reduce using rule 9 (t_state_init)


state 55

   12 t_state_normal_list: T_ID '[' ']' t_state_normal_list .

    $default  reduce using rule 12 (t_state_normal_list)


state 56

   11 t_state_normal_list: T_ID '[' t_ooo ']' .
   13                    | T_ID '[' t_ooo ']' . t_state_normal_list

    T_ID  shift, and go to state 27

    $default  reduce using rule 11 (t_state_normal_list)

    t_state_normal_list  go to state 71


state 57

   25 t_tran_list: T_FROM T_ID T_TO T_ID . T_WITH T_ID '[' t_tran_expr ']'
   26            | T_FROM T_ID T_TO T_ID . T_WITH T_ID '[' t_tran_expr ']' t_tran_list

    T_WITH  shift, and go to state 72


state 58

   39 t_inlist: T_ID ',' . t_inlist

    T_ID  shift, and go to state 47
    '*'   shift, and go to state 48

    t_inlist  go to state 73


state 59

   38 t_inlist: '*' T_ID .
   40         | '*' T_ID . ',' t_inlist

    ','  shift, and go to state 74

    $default  reduce using rule 38 (t_inlist)


state 60

   36 t_in: T_IN '(' t_inlist ':' . T_BOOL ')'

    T_BOOL  shift, and go to state 75


state 61

   41 t_out: T_OUT '(' . t_outlist ':' T_BOOL ')'

    T_ID  shift, and go to state 76

    t_outlist  go to state 77


state 62

   35 t_proc: T_PROCESS T_SYSTEM '[' t_in ',' t_out ']' .

    $default  reduce using rule 35 (t_proc)


state 63

   21 t_out_expr: T_NOT . t_out_expr

    T_NOT    shift, and go to state 63
    T_PRE    shift, and go to state 64
    T_ID     shift, and go to state 65
    T_TRUE   shift, and go to state 66
    T_FALSE  shift, and go to state 67
    '('      shift, and go to state 68

    t_out_expr  go to state 78


state 64

   19 t_out_expr: T_PRE . '(' T_ID ')'

    '('  shift, and go to state 79


state 65

   16 t_out_expr: T_ID .

    $default  reduce using rule 16 (t_out_expr)


state 66

   17 t_out_expr: T_TRUE .

    $default  reduce using rule 17 (t_out_expr)


state 67

   18 t_out_expr: T_FALSE .

    $default  reduce using rule 18 (t_out_expr)


state 68

   20 t_out_expr: '(' . t_out_expr ')'

    T_NOT    shift, and go to state 63
    T_PRE    shift, and go to state 64
    T_ID     shift, and go to state 65
    T_TRUE   shift, and go to state 66
    T_FALSE  shift, and go to state 67
    '('      shift, and go to state 68

    t_out_expr  go to state 80


state 69

   14 t_ooo: T_ID '=' t_out_expr . ';'
   22 t_out_expr: t_out_expr . T_AND t_out_expr
   23           | t_out_expr . T_OR t_out_expr

    T_AND  shift, and go to state 81
    T_OR   shift, and go to state 82
    ';'    shift, and go to state 83


state 70

   15 t_ooo: t_ooo T_ID '=' . t_out_expr ';'

    T_NOT    shift, and go to state 63
    T_PRE    shift, and go to state 64
    T_ID     shift, and go to state 65
    T_TRUE   shift, and go to state 66
    T_FALSE  shift, and go to state 67
    '('      shift, and go to state 68

    t_out_expr  go to state 84


state 71

   13 t_state_normal_list: T_ID '[' t_ooo ']' t_state_normal_list .

    $default  reduce using rule 13 (t_state_normal_list)


state 72

   25 t_tran_list: T_FROM T_ID T_TO T_ID T_WITH . T_ID '[' t_tran_expr ']'
   26            | T_FROM T_ID T_TO T_ID T_WITH . T_ID '[' t_tran_expr ']' t_tran_list

    T_ID  shift, and go to state 85


state 73

   39 t_inlist: T_ID ',' t_inlist .

    $default  reduce using rule 39 (t_inlist)


state 74

   40 t_inlist: '*' T_ID ',' . t_inlist

    T_ID  shift, and go to state 47
    '*'   shift, and go to state 48

    t_inlist  go to state 86


state 75

   36 t_in: T_IN '(' t_inlist ':' T_BOOL . ')'

    ')'  shift, and go to state 87


state 76

   42 t_outlist: T_ID . '=' T_TRUE
   43          | T_ID . '=' T_FALSE
   44          | T_ID . '=' T_TRUE ',' t_outlist
   45          | T_ID . '=' T_FALSE ',' t_outlist

    '='  shift, and go to state 88


state 77

   41 t_out: T_OUT '(' t_outlist . ':' T_BOOL ')'

    ':'  shift, and go to state 89


state 78

   21 t_out_expr: T_NOT t_out_expr .
   22           | t_out_expr . T_AND t_out_expr
   23           | t_out_expr . T_OR t_out_expr

    $default  reduce using rule 21 (t_out_expr)


state 79

   19 t_out_expr: T_PRE '(' . T_ID ')'

    T_ID  shift, and go to state 90


state 80

   20 t_out_expr: '(' t_out_expr . ')'
   22           | t_out_expr . T_AND t_out_expr
   23           | t_out_expr . T_OR t_out_expr

    T_AND  shift, and go to state 81
    T_OR   shift, and go to state 82
    ')'    shift, and go to state 91


state 81

   22 t_out_expr: t_out_expr T_AND . t_out_expr

    T_NOT    shift, and go to state 63
    T_PRE    shift, and go to state 64
    T_ID     shift, and go to state 65
    T_TRUE   shift, and go to state 66
    T_FALSE  shift, and go to state 67
    '('      shift, and go to state 68

    t_out_expr  go to state 92


state 82

   23 t_out_expr: t_out_expr T_OR . t_out_expr

    T_NOT    shift, and go to state 63
    T_PRE    shift, and go to state 64
    T_ID     shift, and go to state 65
    T_TRUE   shift, and go to state 66
    T_FALSE  shift, and go to state 67
    '('      shift, and go to state 68

    t_out_expr  go to state 93


state 83

   14 t_ooo: T_ID '=' t_out_expr ';' .

    $default  reduce using rule 14 (t_ooo)


state 84

   15 t_ooo: t_ooo T_ID '=' t_out_expr . ';'
   22 t_out_expr: t_out_expr . T_AND t_out_expr
   23           | t_out_expr . T_OR t_out_expr

    T_AND  shift, and go to state 81
    T_OR   shift, and go to state 82
    ';'    shift, and go to state 94


state 85

   25 t_tran_list: T_FROM T_ID T_TO T_ID T_WITH T_ID . '[' t_tran_expr ']'
   26            | T_FROM T_ID T_TO T_ID T_WITH T_ID . '[' t_tran_expr ']' t_tran_list

    '['  shift, and go to state 95


state 86

   40 t_inlist: '*' T_ID ',' t_inlist .

    $default  reduce using rule 40 (t_inlist)


state 87

   36 t_in: T_IN '(' t_inlist ':' T_BOOL ')' .

    $default  reduce using rule 36 (t_in)


state 88

   42 t_outlist: T_ID '=' . T_TRUE
   43          | T_ID '=' . T_FALSE
   44          | T_ID '=' . T_TRUE ',' t_outlist
   45          | T_ID '=' . T_FALSE ',' t_outlist

    T_TRUE   shift, and go to state 96
    T_FALSE  shift, and go to state 97


state 89

   41 t_out: T_OUT '(' t_outlist ':' . T_BOOL ')'

    T_BOOL  shift, and go to state 98


state 90

   19 t_out_expr: T_PRE '(' T_ID . ')'

    ')'  shift, and go to state 99


state 91

   20 t_out_expr: '(' t_out_expr ')' .

    $default  reduce using rule 20 (t_out_expr)


state 92

   22 t_out_expr: t_out_expr . T_AND t_out_expr
   22           | t_out_expr T_AND t_out_expr .
   23           | t_out_expr . T_OR t_out_expr

    $default  reduce using rule 22 (t_out_expr)


state 93

   22 t_out_expr: t_out_expr . T_AND t_out_expr
   23           | t_out_expr . T_OR t_out_expr
   23           | t_out_expr T_OR t_out_expr .

    $default  reduce using rule 23 (t_out_expr)


state 94

   15 t_ooo: t_ooo T_ID '=' t_out_expr ';' .

    $default  reduce using rule 15 (t_ooo)


state 95

   25 t_tran_list: T_FROM T_ID T_TO T_ID T_WITH T_ID '[' . t_tran_expr ']'
   26            | T_FROM T_ID T_TO T_ID T_WITH T_ID '[' . t_tran_expr ']' t_tran_list

    T_NOT    shift, and go to state 100
    T_PRE    shift, and go to state 101
    T_ID     shift, and go to state 102
    T_TRUE   shift, and go to state 103
    T_FALSE  shift, and go to state 104
    '('      shift, and go to state 105

    t_tran_expr  go to state 106


state 96

   42 t_outlist: T_ID '=' T_TRUE .
   44          | T_ID '=' T_TRUE . ',' t_outlist

    ','  shift, and go to state 107

    $default  reduce using rule 42 (t_outlist)


state 97

   43 t_outlist: T_ID '=' T_FALSE .
   45          | T_ID '=' T_FALSE . ',' t_outlist

    ','  shift, and go to state 108

    $default  reduce using rule 43 (t_outlist)


state 98

   41 t_out: T_OUT '(' t_outlist ':' T_BOOL . ')'

    ')'  shift, and go to state 109


state 99

   19 t_out_expr: T_PRE '(' T_ID ')' .

    $default  reduce using rule 19 (t_out_expr)


state 100

   32 t_tran_expr: T_NOT . t_tran_expr

    T_NOT    shift, and go to state 100
    T_PRE    shift, and go to state 101
    T_ID     shift, and go to state 102
    T_TRUE   shift, and go to state 103
    T_FALSE  shift, and go to state 104
    '('      shift, and go to state 105

    t_tran_expr  go to state 110


state 101

   30 t_tran_expr: T_PRE . '(' T_ID ')'

    '('  shift, and go to state 111


state 102

   27 t_tran_expr: T_ID .

    $default  reduce using rule 27 (t_tran_expr)


state 103

   28 t_tran_expr: T_TRUE .

    $default  reduce using rule 28 (t_tran_expr)


state 104

   29 t_tran_expr: T_FALSE .

    $default  reduce using rule 29 (t_tran_expr)


state 105

   31 t_tran_expr: '(' . t_tran_expr ')'

    T_NOT    shift, and go to state 100
    T_PRE    shift, and go to state 101
    T_ID     shift, and go to state 102
    T_TRUE   shift, and go to state 103
    T_FALSE  shift, and go to state 104
    '('      shift, and go to state 105

    t_tran_expr  go to state 112


state 106
